setup colors and fonts

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -14,5 +14,5 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
-$primary: #e6a756 !default;
-$secondary: #869252 !default;
+$primary: #f6d7c7 !default;
+$secondary: #9f7866 !default;
