--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -5,7 +5,7 @@
  */
 
 body {
-  font-family: 'Lora';
+  font-family: 'Josefine Sans', sans-serif;
   background-image: linear-gradient(rgba(47, 39, 15, 0.65), rgba(47, 44, 15, 0.65)), url("../img/bg.jpg");
   background-attachment: fixed;
   background-position: center;
@@ -18,7 +18,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Raleway';
+  font-family: 'Open Sans', sans-serif;
 }
 
 p {
@@ -34,7 +34,7 @@ p {
   margin-bottom: 5rem;
   text-transform: uppercase;
   line-height: 1;
-  font-family: 'Raleway';
+  font-family: 'Open Sans', sans-serif;
 }
 
 .site-heading .site-heading-upper {
@@ -75,12 +75,12 @@ p {
 }
 
 #mainNav {
-  background-color: rgba(134, 146, 82, 0.9);
-  font-family: 'Raleway';
+  background-color: rgba(159, 120, 102, 0.9);
+  font-family: 'Open Sans', sans-serif;
 }
 
 #mainNav .navbar-brand {
-  color: #e6a756;
+  color: #f6d7c7;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -89,7 +89,7 @@ p {
 }
 
 #mainNav .navbar-nav .nav-item.active .nav-link {
-  color: #e6a756;
+  color: #f6d7c7;
 }
 
 @media (min-width: 992px) {
@@ -100,7 +100,7 @@ p {
     color: rgba(255, 255, 255, 0.4);
   }
   #mainNav .navbar-nav .nav-item.active .nav-link:hover {
-    color: #e6a756;
+    color: #f6d7c7;
   }
 }
 
@@ -145,7 +145,7 @@ p {
 .cta {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: rgba(230, 167, 86, 0.9);
+  background-color: rgba(246, 215, 199, 0.9);
 }
 
 .cta .cta-inner {
@@ -203,7 +203,7 @@ p {
 }
 
 .list-hours .list-hours-item {
-  border-bottom: 1px solid rgba(230, 167, 86, 0.5);
+  border-bottom: 1px solid rgba(246, 215, 199, 0.5);
   padding-bottom: .25rem;
   margin-bottom: 1rem;
   font-style: italic;
@@ -211,7 +211,7 @@ p {
 
 .list-hours .list-hours-item.today {
   font-weight: bold;
-  color: #e6a756;
+  color: #f6d7c7;
 }
 
 @media (min-width: 992px) {
@@ -226,15 +226,15 @@ p {
 }
 
 .footer {
-  background-color: rgba(134, 146, 82, 0.9);
+  background-color: rgba(159, 120, 102, 0.9);
 }
 
 .text-primary {
-  color: #e6a756 !important;
+  color: #f6d7c7 !important;
 }
 
 .bg-primary {
-  background-color: #e6a756 !important;
+  background-color: #f6d7c7 !important;
 }
 
 .btn {
@@ -242,13 +242,13 @@ p {
 }
 
 .btn-primary {
-  background-color: #e6a756;
-  border-color: #e6a756;
+  background-color: #f6d7c7;
+  border-color: #f6d7c7;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background-color: #df902a;
-  border-color: #df902a;
+  background-color: #efb89b;
+  border-color: #efb89b;
 }
 
 .font-weight-light {
