--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,7 +1,8 @@
 @mixin heading-font {
-  font-family: 'Raleway';
+  font-family: 'Open Sans', sans-serif;
+  
 }
 
 @mixin body-font {
-  font-family: 'Lora';
+  font-family: 'Josefine Sans', sans-serif;
 }
