--- a/css/styles.css
+++ b/css/styles.css
@@ -10119,12 +10119,26 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.jpg");
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: center center;
-  background-size: cover;
 }
+#myVideo{
+position: fixed;
+z-index: -1;
+width: 100%;
+height: auto;
+}
+@media(min-aspect-ratio: 16/9) {
+  #myVideo{
+    width: 100%;
+    height: auto;
+  }
+}
+@media(max-aspect-ratio: 16/9) {
+  #myVideo{
+    width: auto;
+    height: 100%;
+  }
+} 
+
 header.masthead .masthead-subheading {
   font-size: 1.5rem;
   font-style: italic;
@@ -10481,4 +10495,5 @@ section#contact form#contactForm :-ms-input-placeholder {
   text-align: center;
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  background-color: #ecdbc5;
 }
