--- a/css/styles.css
+++ b/css/styles.css
@@ -10125,6 +10125,8 @@ position: fixed;
 z-index: -1;
 width: 100%;
 height: auto;
+margin-left: 50%;
+transform: translate(-50%);
 }
 @media(min-aspect-ratio: 16/9) {
   #myVideo{
